feat: nuxt monorepo test, telephony documentation

--- a/telephone-lab/.vscode/settings.json
+++ b/telephone-lab/.vscode/settings.json
@@ -5,9 +5,12 @@
     "errmsg",
     "Iconoir",
     "Linkus",
+    "mizu",
     "openapi",
+    "peername",
     "webrtc",
     "Xmark",
-    "Yeastar"
+    "Yeastar",
+    "zustand"
   ]
 }
