--- a/telephone-lab/package.json
+++ b/telephone-lab/package.json
@@ -17,7 +17,8 @@
 		"react-dom": "^18",
 		"react-error-boundary": "^4.0.11",
 		"tailwind-merge": "^2.0.0",
-		"ys-webrtc-sdk-core": "^1.0.12"
+		"ys-webrtc-sdk-core": "^1.0.12",
+		"zustand": "^4.4.7"
 	},
 	"devDependencies": {
 		"@types/node": "^20",
